--- a/mainform.ui
+++ b/mainform.ui
@@ -280,10 +280,61 @@
                <string>Process</string>
               </property>
               <layout class="QFormLayout" name="formLayout_2">
-               <item row="0" column="0" colspan="2">
+               <item row="3" column="0" colspan="2">
                 <widget class="QPushButton" name="b_captureStereoFrame">
                  <property name="text">
                   <string>Capture</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="0">
+                <widget class="QLabel" name="label_2">
+                 <property name="text">
+                  <string>maximum Disparity</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="1">
+                <widget class="QSpinBox" name="sb_maxDisp">
+                 <property name="maximum">
+                  <number>1000</number>
+                 </property>
+                 <property name="value">
+                  <number>100</number>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="0">
+                <widget class="QLabel" name="label_3">
+                 <property name="text">
+                  <string>Penalty 1</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="0">
+                <widget class="QLabel" name="label_4">
+                 <property name="text">
+                  <string>Penalty 2</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="1">
+                <widget class="QSpinBox" name="sb_penalty1">
+                 <property name="maximum">
+                  <number>1000</number>
+                 </property>
+                 <property name="value">
+                  <number>10</number>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="1">
+                <widget class="QSpinBox" name="sb_penalty2">
+                 <property name="maximum">
+                  <number>1000</number>
+                 </property>
+                 <property name="value">
+                  <number>100</number>
                  </property>
                 </widget>
                </item>
@@ -432,13 +483,6 @@
               </property>
               <layout class="QFormLayout" name="formLayout_4">
                <item row="0" column="0" colspan="2">
-                <widget class="QPushButton" name="b_process_curr_frame">
-                 <property name="text">
-                  <string>Process Current Frame</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="0" colspan="2">
                 <widget class="QPushButton" name="b_process_seq">
                  <property name="text">
                   <string>Process Sequence</string>
