--- a/mainform.ui
+++ b/mainform.ui
@@ -669,6 +669,11 @@
      </item>
      <item>
       <widget class="QLabel" name="l_status">
+       <property name="styleSheet">
+        <string notr="true">QLabel{
+	color: red;
+}</string>
+       </property>
        <property name="text">
         <string>TextLabel</string>
        </property>
